feature: add more co-location container options in swagger
